@@ -1,4 +1,9 @@
 Changes with Apache 1.3b6
+ 
+  *) Finally fix the shared object loading by using a fallback strategy to
+     overcome the HIDE feature problematic without loosing special cases. Also
+     a huge comment was added to mod_so.c to make the situation more clear
+     for the future. [Ralf S. Engelschall]
 
   *) Protect against FD_SETSIZE mismatches.  [Dean Gaudet]
 
